# rpn_calculator

./: .gitignore  CMakeLists.txt  Dockerfile
.github/workflows/: ci.yml
html/: rpn_8cpp.html  rpn_8h.html  rpn_8h_source.html
include/: rpn.h
latex/: rpn_8cpp.tex  rpn_8h.tex  rpn_8h_source.tex
src/: main.cpp  rpn.cpp
tests/: CMakeLists.txt  test_rpn.cpp
